--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "enzyme": "^3.3.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "uuidv4": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
