--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^3.10.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^6.0.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.1",
     "uuidv4": "^4.0.0"
